# SGI

./: .gitignore  Application.cpp  CMakeLists.txt  GuiAgregarInmuebles.cpp  GuiAgregarInmuebles.h  GuiAgregarInquilinos.cpp  GuiAgregarPropietarios.cpp  GuiAgregarUsers.cpp  GuiEditInmuebles.cpp  GuiEditInmuebles.h  GuiEditInquilinos.cpp  GuiEditInquilinos.h  GuiEditPropietarios.cpp  GuiEditUsers.cpp  GuiEditUsers.h  GuiLogin.cpp  GuiLogin.h  GuiMenuInmuebles.cpp  GuiMenuInmuebles.h  GuiMenuInquilinos.cpp  GuiMenuInquilinos.h  GuiMenuPropietarios.cpp  GuiMenuPropietarios.h  GuiMenuUsers.cpp  Inmueble.cpp  Inmueble.h  Inquilino.cpp  Inquilino.h  Persona.cpp  Persona.h  Propietario.cpp  Propietario.h  Proyecto-POO.zpr  README.md  Usuario.cpp  Usuario.h  ioInmueble.cpp  ioInquilino.cpp  ioInquilino.h  ioPropietario.cpp  (+3 more)
include/: GuiAgregarInquilinos.h  GuiAgregarPropietarios.h  GuiAgregarUsers.h  GuiEditPropietarios.h  GuiMenuUsers.h  ioInmueble.h  ioPropietario.h  ioUsuario.h  wxfb_project.h
src/: Application.cpp  Inmueble.cpp  Inquilino.cpp  Persona.cpp  Propietario.cpp  Usuario.cpp  wxfb_project.cpp
src/fs/: ioInmueble.cpp  ioInquilino.cpp  ioPropietario.cpp  ioUsuario.cpp
src/gui/: GuiAgregarInmuebles.cpp  GuiAgregarInquilinos.cpp  GuiAgregarPropietarios.cpp  GuiAgregarUsers.cpp  GuiEditInmuebles.cpp  GuiEditInquilinos.cpp  GuiEditPropietarios.cpp  GuiEditUsers.cpp  GuiLogin.cpp  GuiMenuInmuebles.cpp  GuiMenuInquilinos.cpp  GuiMenuPropietarios.cpp  GuiMenuUsers.cpp
